# ikaro

./: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.webpack  LICENSE  Pipfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
env/: dev.env  prod.env  secrets.env.default
etc/caddy/: Caddyfile  Caddyfile.prod
etc/janus/: janus.jcfg
etc/nginx/: ikaro.conf  ikaro.docker.conf  ikaro.sausage.conf
etc/nginx-deprecated/: ikaro.conf  ikaro.sausage.conf
etc/nginx-deprecated/snippets/: proxy.conf
etc/nginx/snippets/: connection.conf  headers.conf  proxy.conf
etc/supervisor/: ikaro.conf
ikarodjango/: db.sqlite3  manage.py
ikarodjango/ikaro/: asgi.py  model_utils.py  models.py  routing.py  settings.py  system.py  urls.py  utils.py  wsgi.py
ikarodjango/ikaro/migrations/: 0001_initial.py  0002_auto_20200517_1551.py  0003_user_debug_toolbar.py  0004_auto_20201229_1500.py  0005_auto_20210411_1955.py
ikarodjango/js/: package.json  webpack.config.js
ikarodjango/js/components/: SpectatorsEye.js  command_sender.js  gcs.js  maps.js  websocket.js
ikarodjango/js/gcs/: command_sender.js  controls.js  guided_controls.js  indicators.js  manual_control.js  maps.js  panels.js  video.js
ikarodjango/js/pages/: flight_panel.js  home.js
ikarodjango/js/reducers/: mavlink.js  pageSettings.js  selectors.js  video.js
ikarodjango/js/util/: constants.js  javascript.js  mavutil.js  reduxify.js
ikarodjango/panel/: admin.py  consumers.py  models.py  tests.py  utils.py  views.py
ikarodjango/ui/: urls.py  views.py
(+27 files in other folders)
